--- a/backends/templates/base/base.html
+++ b/backends/templates/base/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Sixfortypy{% endblock title %}</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon/favicon.ico' %}">
 </head>
 <body>
     {% block header %}{% endblock header %}
