--- a/backends/templates/main/index.html
+++ b/backends/templates/main/index.html
@@ -1,50 +1,8 @@
-<!DOCTYPE html>
-<html lang="ko">
+{% extends "base/base_with_navbar.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/slick.css" />
-    <!-- <link rel="stylesheet" href="./css/slick-theme.css"/> -->
-    <link rel="stylesheet" href="./css/main.css">
+{% load static %}
 
-    <script src="./js/jquery-3.5.0.min.js"></script>
-    <script src="./js/jquery-ui.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="./js/slick.js"></script>
-    <script type="text/javascript" src="./js/slick.min.js"></script>
-    <script src="./js/main.js"></script>
-    <title>Sixtyforty</title>
-</head>
-
-<body>
-    <!-- 헤더 -->
-    <header>
-        <!-- 1-1.로고 -->
-        <h1 id="logo">
-            <a href="#">
-                Sixtyforty
-            </a>
-        </h1>
-        <!-- 1-2.GNB메뉴 -->
-        <nav class="gnb">
-            <ul>
-                <li class="on">
-                    <a href="#">장르별</a>
-                </li>
-                <li>
-                    <a href="#">아티스트별</a>
-                </li>
-                <li>
-                    <a href="#">추천</a>
-                </li>
-                <li>
-                    <a href="#">로그인</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+{% block content %}
     <!-- 메인 -->
     <section>
         <div class="container">
@@ -93,13 +51,13 @@
                     <div class="post-wrapper">
                         <div class="post">
                             <div class="slider-image">노래이미지
-                                <img src="./images/cast02.jpg" alt="노래1">
+                                <img src="{% static 'images/cast02.jpg' %}" alt="노래1">
                             </div>
                             <div class="post-info">노래설명</div>
                         </div>
                         <div class="post">
                             <div class="slider-image">노래이미지
-                                <img src="./images/cast03.jpg" alt="노래1">
+                                <img src="{% static 'images/cast03.jpg' %}" alt="노래1">
                             </div>
                             <div class="post-info">노래설명</div>
                         </div>
@@ -150,6 +108,4 @@
     <footer>
 
     </footer>
-</body>
-
-</html>
+{% endblock content %}
