리스트 페이지 연결 및 컴포넌트 분리 -황의철

--- a/backends/templates/base/base_with_navbar.html
+++ b/backends/templates/base/base_with_navbar.html
@@ -15,7 +15,7 @@
         <nav class="gnb">
             <ul>
                 <li class="on">
-                    <a href="#">장르별</a>
+                    <a href="{% url 'music-list' %}">음악목록</a>
                 </li>
                 <li>
                     <a href="#">아티스트별</a>
