--- a/backends/templates/main/list_page.html
+++ b/backends/templates/main/list_page.html
@@ -1,50 +1,8 @@
-<!DOCTYPE html>
-<html lang="ko">
+{% extends 'base/base_with_navbar.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/slick.css" />
-    <!-- <link rel="stylesheet" href="./css/slick-theme.css"/> -->
-    <link rel="stylesheet" href="./css/main.css">
+{% load static %}
 
-    <script src="./js/jquery-3.5.0.min.js"></script>
-    <script src="./js/jquery-ui.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="./js/slick.js"></script>
-    <script type="text/javascript" src="./js/slick.min.js"></script>
-    <script src="./js/main.js"></script>
-    <title>Sixtyforty</title>
-</head>
-
-<body>
-    <!-- 헤더 -->
-    <header>
-        <!-- 1-1.로고 -->
-        <h1 id="logo">
-            <a href="#">
-                Sixtyforty
-            </a>
-        </h1>
-        <!-- 1-2.GNB메뉴 -->
-        <nav class="gnb">
-            <ul>
-                <li class="on">
-                    <a href="#">장르별</a>
-                </li>
-                <li>
-                    <a href="#">아티스트별</a>
-                </li>
-                <li>
-                    <a href="#">추천</a>
-                </li>
-                <li>
-                    <a href="#">로그인</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+{% block content %}
     <!-- 메인 -->
     <section>
         <div class="container">
@@ -68,7 +26,7 @@
                               <tr>
                                 <th scope="row">1</th>
                                 <td>
-                                    <img src="./images/cast02.jpg" alt="앨범">
+                                    <img src="{% static 'images/cast02.jpg' %}" alt="앨범">
                                     <h3>노래제목</h3>
                                     <p>가수</p>
                                 </td>
@@ -166,10 +124,4 @@
               </nav>
         </div>
     </section>
-    <!-- 푸터 -->
-    <footer>
-
-    </footer>
-</body>
-
-</html>
+  {% endblock content %}
