--- a/backends/frontend/css/main.css
+++ b/backends/frontend/css/main.css
@@ -1,4 +1,10 @@
 /*  공통 css  */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&display=swap');
+
+*{
+  font-family: 'Noto Sans KR', sans-serif;
+}
+
 html,
 body {
   margin: 0;
@@ -60,8 +66,8 @@ h3 {
 header {
   width: 100%;
   height: 60px;
-  border-bottom: 1px solid gray;
   padding-top: 20px;
+  z-index: 5;
 }
 
 header #logo {
