--- a/backends/templates/base/base_with_navbar.html
+++ b/backends/templates/base/base_with_navbar.html
@@ -24,7 +24,7 @@
                     <a href="#">추천</a>
                 </li>
                 <li>
-                    <a href="#">로그인</a>
+                    <a href="{% url 'account_login' %}">로그인</a>
                 </li>
             </ul>
         </nav>
