로고,빠비콘 배치 -황의철

--- a/backends/frontend/css/main.css
+++ b/backends/frontend/css/main.css
@@ -80,6 +80,11 @@ header #logo a {
   font-size: 20px;
 }
 
+/* 로고 */
+header #logo img{
+  width: 150px;
+}
+
 header .gnb {
   float: right;
   margin-right: 40px;
