--- a/backends/templates/base/base_with_navbar.html
+++ b/backends/templates/base/base_with_navbar.html
@@ -8,7 +8,7 @@
         <!-- 1-1.로고 -->
         <h1 id="logo">
             <a href="#">
-                Sixtyfortypy
+            <img class="logo" src="{% static 'assets/logo.png'%}" alt="sixfortypy logo">
             </a>
         </h1>
         <!-- 1-2.GNB메뉴 -->
