--- a/backends/templates/main/detail_page.html
+++ b/backends/templates/main/detail_page.html
@@ -11,6 +11,36 @@
           <img src="./images/cast02.jpg" alt="앨범이미지">
 
         </div>
+        <div class="thumb_info">
+          <div class="song_name">
+            눈이오자나
+          </div>
+          <div class="artist">
+            박원
+          </div>
+          <div class="song_info">
+            <dl>
+              <dt>
+                발매일
+              </dt>
+              <dd>
+                2023.12.15
+              </dd>
+              <dt>
+                장르
+              </dt>
+              <dd>
+                발라드
+              </dd>
+              <dt>
+                앨범이름
+              </dt>
+              <dd>
+                ost
+              </dd>
+            </dl>
+          </div>
+        </div>
       </div>
       <div class="playlist">
         <div class="play">
