--- a/backends/templates/main/index.html
+++ b/backends/templates/main/index.html
@@ -1,17 +1,3 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello!</title>
-</head>
-<body>
-    <h1>Hello! World!!</h1>
-    <h1>dd</h1>
-</body>
-</html>
-=======
 {% extends 'base/base_with_navbar.html' %}
 
 
@@ -53,49 +39,49 @@
                 <div class="post-wrapper">
                     <div class="post">
                         <div class="slider-image">노래이미지
-                            <img src="./images/cast02.jpg" alt="노래1">
+                            <img src="{% static 'images/cast02.jpg' %}" alt="노래1">
                         </div>
                         <div class="post-info">노래설명</div>
                     </div>
                     <div class="post">
                         <div class="slider-image">노래이미지
-                            <img src="./images/cast03.jpg" alt="노래1">
+                            <img src="{% static 'images/cast03.jpg' %}" alt="노래1">
                         </div>
                         <div class="post-info">노래설명</div>
                     </div>
                     <div class="post">
                         <div class="slider-image">노래이미지
-                            <img src="./images/cast02.jpg" alt="노래1">
+                            <img src="{% static 'images/cast02.jpg' %}" alt="노래1">
                         </div>
                         <div class="post-info">노래설명</div>
                     </div>
                     <div class="post">
                         <div class="slider-image">노래이미지
-                            <img src="./images/cast03.jpg" alt="노래1">
+                            <img src="{% static 'images/cast03.jpg' %}" alt="노래1">
                         </div>
                         <div class="post-info">노래설명</div>
                     </div>
                     <div class="post">
                         <div class="slider-image">노래이미지
-                            <img src="./images/cast02.jpg" alt="노래1">
+                            <img src="{% static 'images/cast02.jpg' %}" alt="노래1">
                         </div>
                         <div class="post-info">노래설명</div>
                     </div>
                     <div class="post">
                         <div class="slider-image">노래이미지
-                            <img src="./images/cast03.jpg" alt="노래1">
+                            <img src="{% static 'images/cast03.jpg' %}" alt="노래1">
                         </div>
                         <div class="post-info">노래설명</div>
                     </div>
                     <div class="post">
                         <div class="slider-image">노래이미지
-                            <img src="./images/cast02.jpg" alt="노래1">
+                            <img src="{% static 'images/cast02.jpg' %}" alt="노래1">
                         </div>
                         <div class="post-info">노래설명</div>
                     </div>
                     <div class="post">
                         <div class="slider-image">노래이미지
-                            <img src="./images/cast03.jpg" alt="노래1">
+                            <img src="{% static 'images/cast03.jpg' %}" alt="노래1">
                         </div>
                         <div class="post-info">노래설명</div>
                     </div>
@@ -107,4 +93,3 @@
     </div>
 </section>
 {% endblock content %}
->>>>>>> 73febb627c5d4169bd5aa72a967fad42082c8ac2
