--- a/backends/templates/base/base_with_navbar.html
+++ b/backends/templates/base/base_with_navbar.html
@@ -7,7 +7,7 @@
     <header>
         <!-- 1-1.로고 -->
         <h1 id="logo">
-            <a href="#">
+            <a href="{% url 'index' %}">
             <img class="logo" src="{% static 'assets/logo.png'%}" alt="sixfortypy logo">
             </a>
         </h1>
