--- a/backends/templates/main/detail_page.html
+++ b/backends/templates/main/detail_page.html
@@ -8,7 +8,7 @@
     <div class="container">
       <div class="select_play">
         <div class="thumb">
-          <img src="./images/cast02.jpg" alt="앨범이미지">
+          <img src="{% static 'images/cast02.jpg' %}" alt="앨범이미지">
 
         </div>
         <div class="thumb_info">
@@ -45,7 +45,7 @@
       <div class="playlist">
         <div class="play">
           <!-- <div class="play_img">
-                        <img src="./images/cast02.jpg" alt="노래이미지">
+                        <img src="{% static 'images/cast02.jpg' %}" alt="노래이미지">
                     </div> -->
           <div class="play_info">
             <table class="table table-dark">
@@ -62,7 +62,7 @@
                 <tr>
                   <th scope="row">1</th>
                   <td>
-                    <img src="./images/cast02.jpg" alt="앨범">
+                    <img src="{% static 'images/cast02.jpg' %}" alt="앨범">
                     <h3>노래제목</h3>
                     <p>가수</p>
                   </td>
@@ -76,7 +76,7 @@
                 <tr>
                   <th scope="row">2</th>
                   <td>
-                    <img src="./images/cast02.jpg" alt="앨범">
+                    <img src="{% static 'images/cast02.jpg' %}" alt="앨범">
                     <h3>노래제목</h3>
                     <p>가수</p>
                   </td>
@@ -90,7 +90,7 @@
                 <tr>
                   <th scope="row">3</th>
                   <td>
-                    <img src="./images/cast02.jpg" alt="앨범">
+                    <img src="{% static 'images/cast02.jpg' %}" alt="앨범">
                     <h3>노래제목</h3>
                     <p>가수</p>
                   </td>
@@ -104,7 +104,7 @@
                 <tr>
                   <th scope="row">1</th>
                   <td>
-                    <img src="./images/cast02.jpg" alt="앨범">
+                    <img src="{% static 'images/cast02.jpg' %}" alt="앨범">
                     <h3>노래제목</h3>
                     <p>가수</p>
                   </td>
@@ -118,7 +118,7 @@
                 <tr>
                   <th scope="row">1</th>
                   <td>
-                    <img src="./images/cast02.jpg" alt="앨범">
+                    <img src="{% static 'images/cast02.jpg' %}" alt="앨범">
                     <h3>노래제목</h3>
                     <p>가수</p>
                   </td>
@@ -132,7 +132,7 @@
                 <tr>
                   <th scope="row">1</th>
                   <td>
-                    <img src="./images/cast02.jpg" alt="앨범">
+                    <img src="{% static 'images/cast02.jpg' %}" alt="앨범">
                     <h3>노래제목</h3>
                     <p>가수</p>
                   </td>
