--- a/backends/templates/base/base.html
+++ b/backends/templates/base/base.html
@@ -23,5 +23,6 @@
     {% block header %}{% endblock header %}
     {% block content %}{% endblock content %}
     {% block footer %}{% endblock footer %}
+    {% block profilejs %}{% endblock profilejs %}
 </body>
 </html>
