--- a/backends/templates/base/base_with_header.html
+++ b/backends/templates/base/base_with_header.html
@@ -5,7 +5,7 @@
 {% block header %}
 <header class="site-header only-logo max-content-width">
   <a href="{% url 'index' %}">
-    <img class="logo" src="{% static 'assets/logo.svg' %}" alt="Sixfortypy Logo">
+    <img class="logo" src="{% static 'assets/logo.png' %}" alt="Sixfortypy Logo">
   </a>
 </header>
 {% endblock header %}
