--- a/backends/templates/base/base_with_navbar.html
+++ b/backends/templates/base/base_with_navbar.html
@@ -23,9 +23,15 @@
                 <li>
                     <a href="#">추천</a>
                 </li>
-                <li>
-                    <a href="{% url 'account_login' %}">로그인</a>
-                </li>
+
+                {% if user.is_authenticated %}
+                <li><a href="{% url 'profile' user.id %}">내 프로필</a></li>
+                <li><a href="{% url 'account_logout' %}">로그아웃</a></li>
+                {% else %}
+                <li><a href="{% url 'account_login' %}">로그인</a></li>
+                <li><a href="{% url 'account_signup' %}">회원가입</a></li>
+                {% endif %}
+                
             </ul>
         </nav>
     </header>
