--- a/backends/templates/main/index.html
+++ b/backends/templates/main/index.html
@@ -34,7 +34,7 @@
         <div class="bottom_box">
             <div class="post-slider">
                 <div class="silder-title">
-                    Sixtyforty PlayList
+                    Sixtyfortypy PlayList
                 </div>
                 <div class="post-wrapper">
                     <div class="post">
