bundle.js 추가 프로필 세팅 변경 -황의철

--- a/backends/frontend/css/main.css
+++ b/backends/frontend/css/main.css
@@ -851,6 +851,10 @@ header .gnb li {
   position: relative;
 }
 
+.profile-form .profile input[type="file"] {
+  display: none;
+}
+
 .profile-form .profile .upload-button {
   position: absolute;
   right: 0;
