--- a/backends/templates/base/base.html
+++ b/backends/templates/base/base.html
@@ -14,6 +14,7 @@
     <script src="{% static 'js/jquery-3.5.0.min.js' %}"></script>
     <script src="{% static 'js/jquery-ui.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/slick.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/slick.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
